Time to make this public

--- a/index.html
+++ b/index.html
@@ -7,13 +7,45 @@
 </head>
 
 <body>
+  <img src="https://media-exp1.licdn.com/dms/image/C5603AQGoqCAkj4e9HA/profile-displayphoto-shrink_200_200/0?e=1585180800&v=beta&t=oZyxM5Sxh1tug5UFGGDk-1SXW4G6mpjYADE3UgLa4_I" alt="Ubaldo's Profile Picture">
   <h1>Ubaldo Bravo</h1>
-  <p><em>Recent graduate student from
-    <strong>University of California, Berkeley</strong></em></p>
-  <p>As a recent graduate student, I am looking for an entry level position as a Software Developer</p>
+  <p><em>B.S. in
+    <strong>Electrical Engineering and Computer Science</strong></em> from <em>University of California-Berkeley</em></p>
+  <p>As a recent graduate student, I am looking for an entry level position as a Software Developer.</p>
+  <a href="contact.html">Contact Me</a>
+
   <hr>
-  <h3>Education</h3>
-  <p>The high school that I went to is Ganesha High School.</p>
+  <h3>Books</h3>
+  <p>These are a few of the books that I am currently reading.</p>
+  <ul>
+    <li>Ivey, Eowyn. <em>The Snow Child</em></li>
+    <li>Jonasson, Jonas. <em>The 100-Year-Old Man Who Climbed Out The Window and Disappeared</em></li>
+  </ul>
+  <hr>
+  <h3>Developing Projects</h3>
+  <p>Here is a list of some project ideas that I am currently working on and developing.</p>
+  <table>
+    <thead>
+      <th align = "left">Project Name</th>
+      <th align = "left">Description</th>
+      <th align = "left">Source</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Time Calculator</td>
+        <td>Time calculator is designed to find the difference between two times in the same day and return it in a decimal format rounded to the nearest hundreth.</td>
+        <td>Under Development</td>
+      </tr>
+      <tr>
+        <td>Photo Display</td>
+        <td>This software is designed to access your photo library and randomly display a photo upon running.</td>
+        <td>Under Development</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr>
+  <a href="hobbies.html">My Hobbies</a>
+
 </body>
 
 </html>
