Making style modifications

--- a/updates.html
+++ b/updates.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>What's New?</title>
-    <style media="screen">
-      body {
-        background-color: #cbf1f5;
-      }
-    </style>
-
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
 
@@ -29,6 +24,10 @@
           <br>
           Today we have learned the following: Inline CSS, background-color change, colorhunt.co database for colors, Internal CSS, style tag. I am slowly transitioning from hard-coding CSS to more streamlined CSS.
         </td>
+      </tr>
+      <tr>
+        <td>02/06/2020</td>
+        <td>New element introduced! <em>link</em>. This new element is used to apply CSS to our website externally, meaning that all of the CSS code is found in a seperate folder and file. We are using CSS to change the color of headers.</td>
       </tr>
     </table>
   </body>
