--- a/contact.html
+++ b/contact.html
@@ -3,26 +3,28 @@
   <head lang="en" dir="ltr">
     <meta  charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <a href="index.html">Home</a>
     <h1>Contact Information</h1>
     <table>
       <tr>
         <td>Check out my LinkedIn Profile</td>
-        <td><a href="https://www.linkedin.com/in/ubaldobravo/"><img src="images/linkedin.png" width="24" height='24'> </a></td>
+        <td><a href="https://www.linkedin.com/in/ubaldobravo/"><img src="images/linkedin.png" width="24" height='24'></a></td>
       </tr>
       <tr>
         <td>Check out my Github Profile</td>
-        <td><a href="https://github.com/ubravohernandez"> <img src="images/github.png" width="24" height="24"> </a></td>
+        <td><a href="https://github.com/ubravohernandez"> <img src="images/github.png" width="24" height="24"></a></td>
       </tr>
     </table>
     <hr>
     <h3>Feel free to leave a comment below!</h3>
     <form enctype="text/plain" action="mailto:gordisjr@gmail.com" method="post">
       First Name:<br>
-      <input type="text" name="First Name"><br>
+      <input type="text" name="First Name" placeholder="First Name"><br>
       Last Name:<br>
-      <input type="text" name="Last Name"><br>
+      <input type="text" name="Last Name" placeholder="Last Name"><br>
       Comment Below!<br>
       <textarea name="Message" rows="15" cols="60"></textarea><br>
       <input type="submit" value="Submit">
