--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Hobbies</title>
   </head>
-  <body>
+  <body style="background-color: red;">
     <h1>My Hobbies</h1>
     <p>These are a few of my hobbies that enjoy doing in my free time.</p>
     <ul>
