--- a/index.html
+++ b/index.html
@@ -4,32 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>Ubaldo's Site</title>
-  <style media="screen">
-    body{
-      background-color: #cbf1f5;
-    }
-    hr{
-      border-style: none;
-      border-top-style: dotted;
-      border-color: lightgray;
-      border-width: 5px;
-      width: 10%;
-
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <a href="contact.html">Contact Me</a>
   <a href="updates.html">What's New</a>
   <br>
-  <img src="https://media-exp1.licdn.com/dms/image/C5603AQGoqCAkj4e9HA/profile-displayphoto-shrink_200_200/0?e=1585180800&v=beta&t=oZyxM5Sxh1tug5UFGGDk-1SXW4G6mpjYADE3UgLa4_I" alt="Ubaldo's Profile Picture">
-  <h1>Ubaldo Bravo</h1>
-  <p><em>B.S. in
-    <strong>Electrical Engineering and Computer Science</strong></em> from <em>University of California-Berkeley</em></p>
-  <p>As a recent graduate student, I am looking for an entry level position as a Software Developer.</p>
 
-
+  <table>
+    <tr>
+      <td><img src="images/professionalHeadshot.png" alt="Ubaldo's Profile Picture" width="300" height="300" style="border-radius: 50%;"></td>
+      <td><h1>Ubaldo Bravo</h1>
+      <p><em>B.S. in
+        <strong>Electrical Engineering and Computer Science</strong></em> from <em>University of California-Berkeley</em></p>
+      <p>As a recent graduate student, I am looking for an entry level position as a Software Developer.</p></td>
+    </tr>
+  </table>
   <hr>
   <h3>Books</h3>
   <p>These are a few of the books that I am currently reading.</p>
