Entered CSS intermediate section. Added favicon.

--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="icon" href="images/favicon.ico" >
   </head>
   <body style="background-color: red;">
     <h1>My Hobbies</h1>
