--- a/updates.html
+++ b/updates.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>What's New?</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" >
   </head>
 
 
@@ -28,6 +29,22 @@
       <tr>
         <td>02/06/2020</td>
         <td>New element introduced! <em>link</em>. This new element is used to apply CSS to our website externally, meaning that all of the CSS code is found in a seperate folder and file. We are using CSS to change the color of headers.</td>
+      </tr>
+      <tr>
+        <td>02/12/2020</td>
+        <td>Things that we have learned so far:<br>
+          <ul>
+            <li>The anatomy of CSS sytax which is the following: <em> selector { property : value; }</em></li>
+            <li>HTML attributes that specify even further what we are trying to style. Classes & ID.
+              <ul>
+                <li>.classe(s)_name <em>NOTE: You can have several class names in the attribute</em></li>
+                <li>#id_name <em>NOTE: The ID is unique and cannot be shared.</em></li>
+              </ul>
+            <li>
+              We are learning how to implement a favicon into out website. Useful resource is <a href="https://www.favicon.cc/">Favicon Generator.</a> To include a favicon, you will need to use a link tag and set the rel equal to an icon.
+            </li>
+          </ul>
+        </td>
       </tr>
     </table>
   </body>
