--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta  charset="utf-8">
     <title>Contact Me</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" >
   </head>
   <body>
     <a href="index.html">Home</a>
