Most recent updates

--- a/updates.html
+++ b/updates.html
@@ -31,7 +31,7 @@
         <td>New element introduced! <em>link</em>. This new element is used to apply CSS to our website externally, meaning that all of the CSS code is found in a seperate folder and file. We are using CSS to change the color of headers.</td>
       </tr>
       <tr>
-        <td>02/12/2020</td>
+        <td>02/11/2020</td>
         <td>Things that we have learned so far:<br>
           <ul>
             <li>The anatomy of CSS sytax which is the following: <em> selector { property : value; }</em></li>
@@ -45,6 +45,48 @@
             </li>
           </ul>
         </td>
+      </tr>
+      <tr>
+        <td>02/12/2020</td>
+        <td><ul>
+          <li>We are learnging to divide out content using <em>div</em> tags in html, and style those sections using CSS.</li>
+
+          <li>We are diving further into our understanding of Web design by understanding that the Box Model. Some elements consist of Margin, Border, Padding, and Content Area.</li>
+
+          <li>The display property can hold only four values, all of which have different affects on the element.
+          <ul>
+            <li><strong>Block:</strong> Takes up an entire line. Width and heigth can be modified.</li>
+            <li><strong>Inline:</strong> The only space take is enough to fit the content. Cannot modify height and width.</li>
+            <li><strong>Inline-Block:</strong> Takes the best of Block and Inline</li>
+            <li><strong>None:</strong> Essentially removes the element form sight.</li>
+          </ul>
+          Another tag related to Display:None is visibility:none. Which removes the content from site, but does not remove the space that the content takes up.
+          </li>
+        </ul></td>
+      </tr>
+
+
+      <tr>
+        <td>02/13/2020</td>
+        <td>
+          <ul>
+            <li>CSS Positioning continued. CSS has a property know as position. This includes four possible values that we can affect.
+              <ul>
+                <li><strong>Static:</strong> This is essentially what the web browser does normally when displaying HTML</li>
+                <li><strong>Relative:</strong> This moves the position of the content relative to where it would have been if it were static. For example, position: relative; top: 50px; would move the content 50 pixels down.</li>
+                <li><strong>Absolute:</strong> This allows you to change the position of a child whose parent has a relative position. </li>
+                <li><strong>Fixed:</strong> This simply fixes things to the screen. (This unlocks something like a search/navigation bar!)</li>
+              </ul>
+            </li>
+          </ul>
+        </td>
+      </tr>
+
+      <tr>
+        <td>02/14/2020</td>
+        <td><ul>
+          <li>There are two ways to center your content. One are is to go to the parent of your content and set text-align to center. The other way is to set the margin vaule of the content equal to auto.</li>
+        </ul></td>
       </tr>
     </table>
   </body>
